--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
     </div>
   </div>
 
-script>
+<script>
     // Filter book descriptions by removing stop words
     function filterDescription(description) {
       const stopwords = ["the", "a", "an", "in", "on", "and", "or", "of", "to", "is", "for", "by"];
